k8s/yaml/manageiq-chrisley.yaml
apiVersion: v1
kind: Service
metadata:
  name: manageiq
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: manageiq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manageiq
spec:
  replicas: 3
  selector:
    matchLabels:
      app: manageiq
  template:
    metadata:
      labels:
        app: manageiq
    spec:
      containers:
      - name: manageiq
        image: manageiq/manageiq
        ports:
        - containerPort: 443
