k8s/yaml/pacman-chrisley.yaml
# hello-kubernetes.custom-message.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pacman
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: chrisley75/pacman:v1
        ports:
        - containerPort: 80
