k8s/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chrisley-ingress  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: pacman
          servicePort: 80
        path: /pacman(/|$)(.*)
      - backend:
          serviceName: hello-kubernetes-custom
          servicePort: 80
        path: /k8s(/|$)(.*)
